--- a/app/dashboard/styles/searchBar.module.css
+++ b/app/dashboard/styles/searchBar.module.css
@@ -1,7 +1,9 @@
+/* Barre de recherche */
 .searchBar {
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+  flex-wrap: wrap; /* Permet de gérer l'affichage en plusieurs lignes si nécessaire */
 }
 
 .input {
@@ -10,6 +12,7 @@
   border-radius: 20px; 
   border: 2px solid #ffb6c1; 
   width: 320px; 
+  max-width: 100%; /* Permet à l'input de ne pas dépasser la largeur de son conteneur */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
   outline: none;
   transition: all 0.3s ease;
@@ -27,4 +30,19 @@
   border-color: #ff69b4; 
   box-shadow: 0 6px 8px rgba(255, 105, 180, 0.4); 
   background-color: #ffe4e9; 
+}
+
+/* Styles responsives */
+@media (max-width: 768px) {
+  .input {
+    width: 250px; /* Réduction de la largeur pour les écrans moyens */
+  }
+}
+
+@media (max-width: 480px) {
+  .input {
+    width: 100%; /* Utilisation de la pleine largeur sur les petits écrans */
+    padding: 10px; /* Ajustement du remplissage pour les petits écrans */
+    font-size: 14px; /* Réduction de la taille de la police */
+  }
 }
